--- a/src/puzzle/presentation/game-info/game-info.css
+++ b/src/puzzle/presentation/game-info/game-info.css
@@ -1,12 +1,14 @@
 .game-info {
   display: grid;
   grid-template-columns: 60% 40%;
-  margin: 0 auto;
-  width: 500px;
+}
+
+#new {
+  width: 50%;
 }
 
 .labels {
-  background-color: lightgray;
+  background: #d3d3d3;
   border-radius: 12px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -15,9 +17,5 @@
 }
 
 .labels h3 {
-  font-size: 10px;
-}
-
-#new {
-  width: 50%;
+  font-size: 0.625em;
 }
