--- a/style.css
+++ b/style.css
@@ -1,53 +1,68 @@
-html * {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   user-select: none;
 }
 
 body {
-  background-color: lightblue;
-}
-
-h1 {
-  font-size: 50px;
-  margin: 40px auto;
-  width: 500px;
-}
-
-main {
-  margin: 25px auto;
+  background: lightblue;
+  margin: 40px 0;
 }
 
 #app {
   display: grid;
-  grid-template-rows: repeat(4, auto);
-  margin: 0 auto;
-  text-align: center;
-  width: 520px;
+  grid-template: 1fr 625px 1fr / 500px;
+  justify-content: center;
+  row-gap: 40px;
 }
 
-.button {
-  border-radius: 12px;
+h1 {
+  font-size: 3.125em;
+  text-align: center;
+}
+
+button {
   border: none;
-  cursor: pointer;
-  font-size: 20px;
+  border-radius: 12px;
+  font-size: 1.25em;
   font-weight: bold;
 }
 
-.button:not(:disabled):hover {
-  background-color: tomato;
+button:not(:disabled):hover {
+  background: tomato;
   color: white;
 }
 
+main {
+  display: grid;
+  grid-template-rows: 1fr 8fr 1fr;
+  gap: 25px;
+}
+
 footer {
-  width: 500px;
-  margin: 0 auto 25px auto;
+  text-align: center;
 }
 
-a {
-  text-decoration: none;
+@media (width < 530px) {
+  html {
+    font-size: 12px;
+  }
+
+  #app {
+    grid-template: 1fr 525px 1fr / 400px;
+    row-gap: 20px;
+  }
 }
 
-a:hover {
-  text-decoration: underline;
+@media (width < 430px) {
+  html {
+    font-size: 8px;
+  }
+
+  #app {
+    grid-template: 1fr 425px 1fr / minmax(auto, 300px);
+  }
 }
